<package>
  <name>ros_arduino_python</name>
  <version>0.2.0</version>
  <description>
    ROS Arduino Python.
  </description>
  <author>Patrick Goebel</author>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ros_arduino_python</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ros_arduino_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
